# KuFlow-ExtractInvoiceData

./: LICENSE  README.md  pyproject.toml  standalone_activities.py
worker_sample/: activities.py  worker.py  workflow.py
